Bug 483305 - When moving windows, the "all-scroll" cursor is used instead of "move"
Summary: When moving windows, the "all-scroll" cursor is used instead of "move"
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.0.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-12 01:29 UTC by Real Name
Modified: 2024-06-08 03:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments
screen recording showcasing the problem (231.07 KB, video/mp4)
2024-03-12 01:29 UTC, Real Name
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Real Name 2024-03-12 01:29:12 UTC
Created attachment 167005 [details]
screen recording showcasing the problem

SUMMARY
Kwin is using the "all-scroll" cursor instead of "move" when moving windows (see attached screen recording with a debug cursor theme)

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.0-0.rc6.49.fc40.x86_64 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
I know Breeze uses the same cursor for both all-scroll and move, but that's not the case for many themes out there
Comment 1 waynejwoww 2024-05-12 08:49:38 UTC
Can confirm.

I am no cursor expert and do not know which one is the correct cursor, but the "all-scroll"-cursor seems to be the wrong one.

Fedora 40, wayland
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.9-300.fc40.x86_64

Additional info:
The bug is not visible when using the default breeze cursor theme, because the breeze cursor theme coincidentally uses the same cursor graphic for "all-scroll" and the supposedly (!) correct "move" or "grabbing" cursor.
Comment 2 waynejwoww 2024-05-26 07:03:49 UTC
Problem still exists after the update to Plasma 6.0.5

Plasma: 6.0.5
Frameworks: 6.2.0
Qt: 6.7.0
Comment 3 Bug Janitor Service 2024-05-31 11:57:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5805
Comment 4 Bug Janitor Service 2024-05-31 12:16:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5806
Comment 5 Vlad Zahorodnii 2024-05-31 14:32:12 UTC
Git commit d7772031b1a3427a41ac0f40dc282f8f41e8b601 by Vlad Zahorodnii.
Committed on 31/05/2024 at 14:24.
Pushed by vladz into branch 'master'.

Use "grabbing" cursor during interactive move

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/d7772031b1a3427a41ac0f40dc282f8f41e8b601
Comment 6 Vlad Zahorodnii 2024-05-31 14:57:16 UTC
Git commit 78c3aa13b388c290bd48cc1ff7ba2d86f8c222c5 by Vlad Zahorodnii.
Committed on 31/05/2024 at 14:34.
Pushed by vladz into branch 'Plasma/6.1'.

Use "grabbing" cursor during interactive move
(cherry picked from commit d7772031b1a3427a41ac0f40dc282f8f41e8b601)

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/78c3aa13b388c290bd48cc1ff7ba2d86f8c222c5