Use "grabbing" cursor during interactive move

BUG: 483305
(cherry picked from commit d7772031b1a3427a41ac0f40dc282f8f41e8b601)